Archive2/25/5fdbabb31bcb11/output
+ g++ -std=c++11 -O0 -pedantic-errors -Wall -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:8:5: error: a function-definition is not allowed here before 'return'
     return 0;
     ^
